--- a/data/settings.json
+++ b/data/settings.json
@@ -2,13 +2,13 @@
   "siteName": "Khotwa Student Council",
   "tagline_ar": "مجلس طلاب خطوة",
   "tagline_en": "Khotwa Student Council",
-  "description": "موقع مجلس طلاب خطوة بجامعة لا تروب.",
-  "ogImage": "https://g.top4top.io/p_3516rfttb1.jpg",
+  "description": "آخر أخبار مجلس طلاب خطوة في جامعة لا تروب – إعلانات، فعاليات، وفرص.",
+  "ogImage": "https://g.top4top.io/p_3516rfttb1.jpg", 
   "social": {
     "instagram": "https://www.instagram.com/khotwa.sc/",
-    "twitter": "",
-    "facebook": "",
-    "linkedin": ""
+    "twitter": "https://twitter.com/khotwasc",
+    "facebook": "https://facebook.com/khotwasc",
+    "linkedin": "https://linkedin.com/company/khotwasc"
   },
   "footer": {
     "copyright": "Khotwa Student Council"
