--- a/data/settings.json
+++ b/data/settings.json
@@ -2,7 +2,7 @@
   "siteName": "Khotwa Student Council",
   "tagline_ar": "مجلس طلاب خطوة",
   "tagline_en": "Khotwa Student Council",
-  "description": "آخر أخبار مجلس طلاب خطوة في جامعة لا تروب – إعلانات، فعاليات، وفرص.",
+  "description": "آخر أخبار مجلس طلاب خطوة  – إعلانات، فعاليات، وفرص.",
   "ogImage": "https://g.top4top.io/p_3516rfttb1.jpg", 
   "social": {
     "instagram": "https://www.instagram.com/khotwa.sc/",
