--- a/data/settings.json
+++ b/data/settings.json
@@ -1,16 +1,5 @@
 {
   "siteName": "Khotwa Student Council",
-  "tagline_ar": "مجلس طلاب خطوة",
-  "tagline_en": "Khotwa Student Council",
-  "description": "آخر أخبار مجلس طلاب خطوة  – إعلانات، فعاليات، وفرص.",
-  "ogImage": "https://g.top4top.io/p_3516rfttb1.jpg", 
-  "social": {
-    "instagram": "https://www.instagram.com/khotwa.sc/",
-    "twitter": "https://twitter.com/khotwasc",
-    "facebook": "https://facebook.com/khotwasc",
-    "linkedin": "https://linkedin.com/company/khotwasc"
-  },
-  "footer": {
-    "copyright": "Khotwa Student Council"
-  }
+  "footer": { "copyright": "Khotwa Student Council" },
+  "social": { "instagram": "https://www.instagram.com/khotwa.sc/" }
 }
