--- a/data/settings.json
+++ b/data/settings.json
@@ -1,5 +1,4 @@
 {
-  "siteName": "Khotwa Student Council",
-  "footer": { "copyright": "Khotwa Student Council" },
-  "social": { "instagram": "https://www.instagram.com/khotwa.sc/" }
+  "title": "Khotwa Student Council",
+  "description": "مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن."
 }
